--- a/portal.html
+++ b/portal.html
@@ -24,7 +24,7 @@
 <div id="content">
 	<div class="login-card">
 		<div class="banner">
-		<img src="captiveportal-logo.png"/><br>
+		<img src="https://github.com/KenyOS/pfsense-captive-portal/raw/master/captiveportal-logo.png"/><br>
 		</div>
  		<h1></h1>
 	  <form name="login_form" method="post" action="$PORTAL_ACTION$">
